c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/mod_double_2.c
int main(void) {
    /* You can't apply the modulo operator to a double */
    double e =  3.0 % 5;
    return 0;
}